working home page

--- a/app/stylesheets/items/_show.sass
+++ b/app/stylesheets/items/_show.sass
@@ -48,7 +48,7 @@ body.items-show
     width: 300px
   #item-zones
     font:
-      family: $body-font
+      family: $text-font
       size: 85%
     p:first-child
       margin-bottom: .25em
