--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -41,7 +41,7 @@
           %li
             %a{:href => "http://github.com/matchu/openneo-impress"} The Source Code
           %li
-            %a{:href => "/terms.html"} Terms of Use
+            %a{:href => terms_path} Terms of Use
         %div
           Contact:
           %ul
