--- a/app/stylesheets/_layout.sass
+++ b/app/stylesheets/_layout.sass
@@ -198,6 +198,15 @@ dd
   .current
     font-weight: bold
 
+.object .nc-icon
+  height: 16px
+  position: absolute
+  right: ($object-width - $object-img-size) / 2 + $object-padding
+  top: $object-img-size - $nc-icon-size
+  width: 16px
+  &:hover
+    +opacity(0.5)
+
 /* Fonts
 
 /* A font by Jos Buivenga (exljbris) -> www.exljbris.nl
